--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,14 +4,24 @@
   // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
   "version": "0.2.0",
   "configurations": [
-
     {
-      "name": "main.py",
+      "name": "Python: Main",
       "type": "python",
       "request": "launch",
       "program": "main.py",
       "console": "integratedTerminal",
       "justMyCode": true
+    },
+    {
+      "name": "Python: profile main",
+      "type": "python",
+      "request": "launch",
+      "module": "cProfile",
+      "args": [
+        "-o",
+        "/tmp/tpm.prof",
+        "main.py"
+      ]
     }
   ]
 }
